# LotoLogic

./: README.md
lotologic-core/: .github_workflow_sync-cache.yml  .gitignore  BUGS_FOUND.md  README.md  pyproject.toml  sync_dados.bat
lotologic-core/data-cache/: diadesorte.json  duplasena.json  lotofacil.json  lotomania.json  maismilionaria.json  megasena.json  quina.json  supersete.json  timemania.json
lotologic-core/examples/: lotofacil_pipeline.py
lotologic-core/lotologic_core/: __init__.py  cli.py
lotologic-core/lotologic_core/analysis/: frequency.py  pairs.py  quality_score.py
lotologic-core/lotologic_core/backtest/: runner.py
lotologic-core/lotologic_core/data/: cache.py  caixa_api.py
lotologic-core/lotologic_core/domain/: lottery.py
lotologic-core/lotologic_core/generators/: covering.py  genetic.py  pareto.py  strategies.py
lotologic-core/tests/: test_core.py
