[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lotologic-core"
version = "0.1.0"
description = "Motor de análise e geração de jogos para loterias da CAIXA — núcleo lógico aprimorado para o LotoLogic, com correções dos bugs do AG-LotofacilPreditor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "lotologic-core contributors" }
]
keywords = ["loteria", "lotofacil", "megasena", "algoritmo-genetico", "estatistica"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
lotologic-core = "lotologic_core.cli:main"

[tool.setuptools.packages.find]
include = ["lotologic_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
